--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "canvas": "^2.9.1",
     "fastify": "^3.15.1"
   },
   "devDependencies": {
