--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "noImplicitAny": true
+    "noImplicitAny": false
     "incremental": true,
     "target": "es6",
     "module": "commonjs",
