--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "fastify",
+  "name": "catchcord-image-api",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Faraz Patankar",
-  "license": "MIT",
+  "author": "6A-Realm",
+  "license": "CLOSED SOURCE",
+
   "scripts": {
     "dev": "nodemon index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
+
   "dependencies": {
     "canvas": "^2.9.1",
     "fastify": "^3.15.1"
   },
+
   "devDependencies": {
     "@types/node": "^15.6.1",
     "nodemon": "^2.0.7",
